--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ python-dotenv = "*"
 drf-yasg = "*"
 django-debug-toolbar = "*"
 pillow = "*"
+more-itertools = "*"
 
 [requires]
 python_version = "3.8"
