--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ djoser = "*"
 djangorestframework-simplejwt = "*"
 cryptography = "*"
 django-cors-headers = "*"
+django-redis = "*"
 
 [requires]
 python_version = "3.8"
