--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ django-filter = "*"
 cerberus = "*"
 aiohttp = "*"
 django-db-logger = "*"
+drf-extensions = {file = "https://github.com/chibisov/drf-extensions/archive/master.zip"}
 
 [requires]
 python_version = "3.8"
