--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,14 @@ services:
       - db
 
   db:
-    image: postgres:12
+# new section
+    build:
+      context: .
+      dockerfile: postgres.dockerfile
+# end of new section
+# old section
+#    image: postgres:12
+# end of old section
     restart: always
     environment:
       - POSTGRES_DB=postgres
