--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     depends_on:
       - db
       - redis
+    hostname: celery-main
 
   celery-beat:
       build: .
@@ -75,12 +76,24 @@ services:
       depends_on:
         - db
         - redis
+      hostname: celery-beat
 
   flower:
+    # http://localhost:8888/
     image: mher/flower
-    command: ["flower", "--broker=redis://redis:6379/0", "--port=8888"]
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - FLOWER_PORT=8888
+    depends_on:
+      - celery
+      - celery-beat
+      - redis
+    restart: always
     ports:
-      - 8888:8888
+      - target: 8888
+        published: 8888
+        protocol: tcp
+        mode: host
 
 
 
