--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
   web:
     build: .
     #command: python /code/manage.py runserver 0.0.0.0:8000
-    command: >-
-      gunicorn series.wsgi:application --config ./gunicorn.conf.py
+    command: gunicorn series.wsgi:application --config ./gunicorn.conf.py
     env_file:
       - ./series/.env
     volumes:
