--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,15 +13,15 @@ server {
         proxy_redirect off;
     }
 
-    location /staticfiles/ {
-        alias /home/app/web/staticfiles/;
-    }
+//    location /staticfiles/ {
+//        alias /home/app/web/staticfiles/;
+//    }
     location /static/ {
         alias /home/app/web/staticfiles/;
     }
-    location /mediafiles/ {
-        alias /home/app/web/mediafiles/;
-    }
+//    location /mediafiles/ {
+//        alias /home/app/web/mediafiles/;
+//    }
     location /media/ {
         alias /home/app/web/mediafiles/;
     }
